--- a/package.json
+++ b/package.json
@@ -9,5 +9,25 @@
     "express": "^4.17.3",
     "googleapis": "^96.0.0",
     "node-fetch": "2.0"
-  }
+  },
+  "name": "bidireccionalservertokens",
+  "description": "",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://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@github.com/administracionCelerex/server-get-tokens.git"
+  },
+  "keywords": [],
+  "author": "luissevilla",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/administracionCelerex/server-get-tokens/issues"
+  },
+  "homepage": "https://github.com/administracionCelerex/server-get-tokens#readme"
 }
